--- a/package.json
+++ b/package.json
@@ -11739,6 +11739,10 @@
 					"when": "false"
 				},
 				{
+					"command": "gitlens.graph.openSCM",
+					"when": "false"
+				},
+				{
 					"command": "gitlens.graph.switchToAnotherBranch",
 					"when": "false"
 				},
