--- a/package.json
+++ b/package.json
@@ -17603,6 +17603,10 @@
 		"@vscode/test-electron": "2.4.0",
 		"@vscode/test-web": "0.0.54",
 		"@vscode/vsce": "2.27.0",
+		"@wdio/cli": "^8.39.0",
+		"@wdio/local-runner": "^8.39.0",
+		"@wdio/mocha-framework": "^8.39.0",
+		"@wdio/spec-reporter": "^8.39.0",
 		"circular-dependency-plugin": "5.2.2",
 		"clean-webpack-plugin": "4.0.0",
 		"concurrently": "8.2.2",
@@ -17638,18 +17642,15 @@
 		"svgo": "3.3.2",
 		"terser-webpack-plugin": "5.3.10",
 		"ts-loader": "9.5.1",
+		"ts-node": "^10.9.2",
 		"tsc-alias": "1.8.10",
+		"typescript": "5.5.3",
+		"wdio-vscode-service": "^6.1.0",
 		"webpack": "5.92.0",
 		"webpack-bundle-analyzer": "4.10.2",
 		"webpack-cli": "5.1.4",
 		"webpack-node-externals": "3.0.0",
-		"@wdio/cli": "^8.39.0",
-		"@wdio/local-runner": "^8.39.0",
-		"@wdio/mocha-framework": "^8.39.0",
-		"@wdio/spec-reporter": "^8.39.0",
-		"ts-node": "^10.9.2",
-		"typescript": "5.5.3",
-		"wdio-vscode-service": "^6.1.0"
+		"webpack-require-from": "^1.8.6"
 	},
 	"resolutions": {
 		"esbuild": "0.21.5",
