--- a/.github/workflows/issues-stale.yml
+++ b/.github/workflows/issues-stale.yml
@@ -1,8 +1,8 @@
 name: 'Close stale issues'
 
 on:
-    schedule:
-        - cron: '00 5 * * *'
+    # schedule:
+    #     - cron: '00 5 * * *'
     workflow_dispatch:
 
 jobs:
