--- a/.github/workflows/cd-pre.yml
+++ b/.github/workflows/cd-pre.yml
@@ -1,14 +1,20 @@
 name: Publish pre-release
 
 on:
-    schedule:
-        - cron: '0 9 * * *' # every day at 4am EST
+    # schedule:
+    #     - cron: '0 9 * * *' # every day at 4am EST
     workflow_dispatch:
+      inputs:
+        run_check_task:
+          description: 'Should run the task (true/false)'
+          required: true
+          default: 'false'
 
 jobs:
     check:
         name: Check for updates
         runs-on: ubuntu-latest
+        if: ${{ github.event.inputs.run_check_task == 'true' }}
         permissions:
             contents: write
         outputs:
@@ -50,7 +56,7 @@ jobs:
         name: Publish pre-release
         needs: check
         runs-on: ubuntu-latest
-        if: needs.check.outputs.status == 'changed'
+        if: needs.check.outputs.status == 'changed' || github.event.inputs.run_check_task == 'true'
         steps:
             - name: Checkout code
               uses: actions/checkout@v3
@@ -66,8 +72,8 @@ jobs:
               run: node -e "console.log('PACKAGE_VERSION=' + require('./package.json').version + '\nPACKAGE_NAME=' + require('./package.json').name + '-' + require('./package.json').version)" >> $GITHUB_ENV
             - name: Package extension
               run: yarn run package --pre-release
-            - name: Publish extension
-              run: yarn vsce publish --yarn --pre-release --packagePath ./${{ env.PACKAGE_NAME }}.vsix -p ${{ secrets.GITLENS_VSCODE_MARKETPLACE_PAT }}
+            # - name: Publish extension
+            #   run: yarn vsce publish --yarn --pre-release --packagePath ./${{ env.PACKAGE_NAME }}.vsix -p ${{ secrets.GITLENS_VSCODE_MARKETPLACE_PAT }}
             - name: Publish artifact
               uses: actions/upload-artifact@v3
               with:
