--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "gitlens",
-	"displayName": "GitLens — Git supercharged",
+	"name": "free-senltig",
+	"displayName": "free-senltig",
 	"description": "Supercharge Git within VS Code — Visualize code authorship at a glance via Git blame annotations and CodeLens, seamlessly navigate and explore Git repositories, gain valuable insights via rich visualizations and powerful comparison commands, and so much more",
 	"version": "17.4.0",
 	"engines": {
@@ -9,7 +9,7 @@
 		"vscode": "^1.92.0"
 	},
 	"license": "SEE LICENSE IN LICENSE",
-	"publisher": "eamodio",
+	"publisher": "wlnxingdev",
 	"author": {
 		"name": "Eric Amodio",
 		"email": "eamodio@gmail.com"
